<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/all_routes"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/all_routes" />
        <item
            android:id="@+id/complaints"
            android:icon="@drawable/complaints"
            android:title="@string/complaints" />
        <item
            android:id="@+id/notification"
            android:icon="@drawable/notifications"
            android:title="@string/notifications" />
        <item
            android:id="@+id/college_map"
            android:icon="@drawable/google"
            android:title="@string/college_map" />
        <item
            android:id="@+id/route_map"
            android:title="@string/routemap"
            android:icon="@drawable/route"
            />
        <item android:id="@+id/bugreport"
            android:title="@string/bugreport"
            android:icon="@drawable/bugreport"
            />
        <item
            android:id="@+id/about"
            android:title="@string/about"
            />
    </group>


</menu>
