<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.root.gni_transport.gni.ui.fragments.HomenoticeFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@color/red"
                    android:text="@string/noticeboard"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:textColor="@color/white"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textSize="22sp"
                        android:textColor="@color/black"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/title"
                        android:text="@string/complaint_description"
                        android:textSize="20sp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                </LinearLayout>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/teal">
                </View>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/subject"
                        android:textSize="22sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/notice"
                        android:text="@string/complaint_description"
                        android:textSize="20sp"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/teal">
                </View>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textSize="22sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/date"
                        android:text="@string/complaint_description"
                        android:textSize="20sp"/>
                </LinearLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/teal"
                    android:text="@string/primaryroute"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:textColor="@color/white"/>

            </LinearLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>
    </RelativeLayout>
</RelativeLayout>
