<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.root.gni_transport.gni.ui.activities.Complaints">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/teal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/complaint_text"
                android:textColor="#ffffff"
                android:gravity="center"
                android:textSize="25sp"
                />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:hint="@string/complaint_title"
                    android:id="@+id/title"
                    android:inputType="textAutoComplete"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/description"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:inputType="textAutoComplete"
                    android:hint="@string/complaint_description"
                    android:maxLength="150"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/submit"
                    android:background="@color/teal"
                    android:text="@string/submit"
                    android:textColor="#ffffff"
                    android:gravity="center"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        
    </LinearLayout>

</ScrollView>
